@@ -630,6 +630,11 @@ argument_list|)
 throw|;
 block|}
 comment|// Validate the second parameter, which is either a solitary double or an array of doubles.
+name|boolean
+name|wantManyQuantiles
+init|=
+literal|false
+decl_stmt|;
 switch|switch
 condition|(
 name|parameters
@@ -793,6 +798,10 @@ literal|" was passed instead."
 argument_list|)
 throw|;
 block|}
+name|wantManyQuantiles
+operator|=
+literal|true
+expr_stmt|;
 break|break;
 default|default:
 throw|throw
@@ -918,38 +927,34 @@ argument_list|)
 throw|;
 block|}
 block|}
+comment|// Return an evaluator depending on the return type
+if|if
+condition|(
+name|wantManyQuantiles
+condition|)
+block|{
 return|return
 operator|new
-name|GenericUDAFPercentileApproxEvaluator
+name|GenericUDAFMultiplePercentileApproxEvaluator
 argument_list|()
 return|;
 block|}
-comment|/**    * Construct a histogram using the algorithm described by Ben-Haim and Tom-Tov, and then    * use it to compute an approximate percentile value.    */
+else|else
+block|{
+return|return
+operator|new
+name|GenericUDAFSinglePercentileApproxEvaluator
+argument_list|()
+return|;
+block|}
+block|}
 specifier|public
 specifier|static
 class|class
-name|GenericUDAFPercentileApproxEvaluator
+name|GenericUDAFSinglePercentileApproxEvaluator
 extends|extends
-name|GenericUDAFEvaluator
+name|GenericUDAFPercentileApproxEvaluator
 block|{
-comment|// For PARTIAL1 and COMPLETE: ObjectInspectors for original data
-specifier|private
-name|PrimitiveObjectInspector
-name|inputOI
-decl_stmt|;
-specifier|private
-name|ObjectInspector
-name|quantilesOI
-decl_stmt|;
-specifier|private
-name|PrimitiveObjectInspector
-name|nbinsOI
-decl_stmt|;
-comment|// For PARTIAL2 and FINAL: ObjectInspectors for partial aggregations (list of doubles)
-specifier|private
-name|StandardListObjectInspector
-name|loi
-decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -1048,10 +1053,8 @@ comment|// The return type for a partial aggregation is still a list of doubles,
 comment|// GenericUDAFHistogramNumeric, but we add on the percentile values requested to the
 comment|// end, and handle serializing/deserializing before we pass things on to the parent
 comment|// method.
-comment|// The return type for FINAL and COMPLETE is a full aggregation result, which is also a
-comment|// list of DoubleWritables with the requested quantile values. The only exception is
-comment|// when a single double, as opposed to an array of doubles, is passed as a parameter. In
-comment|// that case, just return a single double value.
+comment|// The return type for FINAL and COMPLETE is a full aggregation result, which is a
+comment|// single double value
 if|if
 condition|(
 name|m
@@ -1064,18 +1067,7 @@ name|m
 operator|==
 name|Mode
 operator|.
-name|COMPLETE
-operator|||
-name|quantilesOI
-operator|.
-name|getCategory
-argument_list|()
-operator|==
-name|ObjectInspector
-operator|.
-name|Category
-operator|.
-name|LIST
+name|PARTIAL2
 condition|)
 block|{
 return|return
@@ -1098,6 +1090,331 @@ name|writableDoubleObjectInspector
 return|;
 block|}
 block|}
+annotation|@
+name|Override
+specifier|public
+name|Object
+name|terminate
+parameter_list|(
+name|AggregationBuffer
+name|agg
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+name|PercentileAggBuf
+name|myagg
+init|=
+operator|(
+name|PercentileAggBuf
+operator|)
+name|agg
+decl_stmt|;
+if|if
+condition|(
+name|myagg
+operator|.
+name|histogram
+operator|.
+name|getUsedBins
+argument_list|()
+operator|<
+literal|1
+condition|)
+block|{
+comment|// SQL standard - return null for zero elements
+return|return
+literal|null
+return|;
+block|}
+else|else
+block|{
+assert|assert
+operator|(
+name|myagg
+operator|.
+name|quantiles
+operator|!=
+literal|null
+operator|)
+assert|;
+return|return
+operator|new
+name|DoubleWritable
+argument_list|(
+name|myagg
+operator|.
+name|histogram
+operator|.
+name|quantile
+argument_list|(
+name|myagg
+operator|.
+name|quantiles
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+return|;
+block|}
+block|}
+block|}
+specifier|public
+specifier|static
+class|class
+name|GenericUDAFMultiplePercentileApproxEvaluator
+extends|extends
+name|GenericUDAFPercentileApproxEvaluator
+block|{
+annotation|@
+name|Override
+specifier|public
+name|ObjectInspector
+name|init
+parameter_list|(
+name|Mode
+name|m
+parameter_list|,
+name|ObjectInspector
+index|[]
+name|parameters
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+name|super
+operator|.
+name|init
+argument_list|(
+name|m
+argument_list|,
+name|parameters
+argument_list|)
+expr_stmt|;
+comment|// init input object inspectors
+if|if
+condition|(
+name|m
+operator|==
+name|Mode
+operator|.
+name|PARTIAL1
+operator|||
+name|m
+operator|==
+name|Mode
+operator|.
+name|COMPLETE
+condition|)
+block|{
+name|inputOI
+operator|=
+operator|(
+name|PrimitiveObjectInspector
+operator|)
+name|parameters
+index|[
+literal|0
+index|]
+expr_stmt|;
+name|quantilesOI
+operator|=
+name|parameters
+index|[
+literal|1
+index|]
+expr_stmt|;
+if|if
+condition|(
+name|parameters
+operator|.
+name|length
+operator|>
+literal|2
+condition|)
+block|{
+name|nbinsOI
+operator|=
+operator|(
+name|PrimitiveObjectInspector
+operator|)
+name|parameters
+index|[
+literal|2
+index|]
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|loi
+operator|=
+operator|(
+name|StandardListObjectInspector
+operator|)
+name|parameters
+index|[
+literal|0
+index|]
+expr_stmt|;
+block|}
+comment|// Init output object inspectors.
+comment|//
+comment|// The return type for a partial aggregation is still a list of doubles, as in
+comment|// GenericUDAFHistogramNumeric, but we add on the percentile values requested to the
+comment|// end, and handle serializing/deserializing before we pass things on to the parent
+comment|// method.
+comment|// The return type for FINAL and COMPLETE is a full aggregation result, which is also
+comment|// a list of doubles
+return|return
+name|ObjectInspectorFactory
+operator|.
+name|getStandardListObjectInspector
+argument_list|(
+name|PrimitiveObjectInspectorFactory
+operator|.
+name|writableDoubleObjectInspector
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|Object
+name|terminate
+parameter_list|(
+name|AggregationBuffer
+name|agg
+parameter_list|)
+throws|throws
+name|HiveException
+block|{
+name|PercentileAggBuf
+name|myagg
+init|=
+operator|(
+name|PercentileAggBuf
+operator|)
+name|agg
+decl_stmt|;
+if|if
+condition|(
+name|myagg
+operator|.
+name|histogram
+operator|.
+name|getUsedBins
+argument_list|()
+operator|<
+literal|1
+condition|)
+block|{
+comment|// SQL standard - return null for zero elements
+return|return
+literal|null
+return|;
+block|}
+else|else
+block|{
+name|ArrayList
+argument_list|<
+name|DoubleWritable
+argument_list|>
+name|result
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|DoubleWritable
+argument_list|>
+argument_list|()
+decl_stmt|;
+assert|assert
+operator|(
+name|myagg
+operator|.
+name|quantiles
+operator|!=
+literal|null
+operator|)
+assert|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|myagg
+operator|.
+name|quantiles
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|result
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DoubleWritable
+argument_list|(
+name|myagg
+operator|.
+name|histogram
+operator|.
+name|quantile
+argument_list|(
+name|myagg
+operator|.
+name|quantiles
+index|[
+name|i
+index|]
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|result
+return|;
+block|}
+block|}
+block|}
+comment|/**    * Construct a histogram using the algorithm described by Ben-Haim and Tom-Tov, and then    * use it to compute an approximate percentile value.    */
+specifier|public
+specifier|abstract
+specifier|static
+class|class
+name|GenericUDAFPercentileApproxEvaluator
+extends|extends
+name|GenericUDAFEvaluator
+block|{
+comment|// For PARTIAL1 and COMPLETE: ObjectInspectors for original data
+specifier|protected
+name|PrimitiveObjectInspector
+name|inputOI
+decl_stmt|;
+specifier|protected
+name|ObjectInspector
+name|quantilesOI
+decl_stmt|;
+specifier|protected
+name|PrimitiveObjectInspector
+name|nbinsOI
+decl_stmt|;
+comment|// For PARTIAL2 and FINAL: ObjectInspectors for partial aggregations (list of doubles)
+specifier|protected
+name|StandardListObjectInspector
+name|loi
+decl_stmt|;
 annotation|@
 name|Override
 specifier|public
@@ -1730,138 +2047,6 @@ argument_list|(
 name|v
 argument_list|)
 expr_stmt|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|Object
-name|terminate
-parameter_list|(
-name|AggregationBuffer
-name|agg
-parameter_list|)
-throws|throws
-name|HiveException
-block|{
-name|PercentileAggBuf
-name|myagg
-init|=
-operator|(
-name|PercentileAggBuf
-operator|)
-name|agg
-decl_stmt|;
-if|if
-condition|(
-name|myagg
-operator|.
-name|histogram
-operator|.
-name|getUsedBins
-argument_list|()
-operator|<
-literal|1
-condition|)
-block|{
-comment|// SQL standard - return null for zero elements
-return|return
-literal|null
-return|;
-block|}
-else|else
-block|{
-name|ArrayList
-argument_list|<
-name|DoubleWritable
-argument_list|>
-name|result
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|DoubleWritable
-argument_list|>
-argument_list|()
-decl_stmt|;
-assert|assert
-operator|(
-name|myagg
-operator|.
-name|quantiles
-operator|!=
-literal|null
-operator|)
-assert|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|myagg
-operator|.
-name|quantiles
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|result
-operator|.
-name|add
-argument_list|(
-operator|new
-name|DoubleWritable
-argument_list|(
-name|myagg
-operator|.
-name|histogram
-operator|.
-name|quantile
-argument_list|(
-name|myagg
-operator|.
-name|quantiles
-index|[
-name|i
-index|]
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|myagg
-operator|.
-name|quantiles
-operator|.
-name|length
-operator|==
-literal|1
-condition|)
-block|{
-return|return
-name|result
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-return|;
-block|}
-else|else
-block|{
-return|return
-name|result
-return|;
-block|}
-block|}
 block|}
 comment|// Aggregation buffer methods. We wrap GenericUDAFHistogramNumeric's aggregation buffer
 comment|// inside our own, so that we can also store requested quantile values between calls
